partie 1 : paragraphe jcvd

--- a/index.html
+++ b/index.html
@@ -4,10 +4,90 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>JCVD</title>
+		
+		<style type="text/css">
+		
+			table {
+				border-collapse: collapse;
+			}
+			
+			td, th { /* Mettre une bordure sur les td ET les th */
+				border: 1px solid black;
+			}
+			
+		</style>
+		
 	</head>
 
 	<body>
-		<img src="images/firefox-icon.png" alt="Mon image de test" />
+	
+		<section id="jcvd">
+		
+			<h1> JCVD </h1>
+			
+			<img src="https://media.gettyimages.com/id/100961135/es/foto/belgian-actor-jean-claude-van-damme-on-the-set-of-universal-soldier-1991.jpg?s=612x612&w=gi&k=20&c=5g7KCQDlpg53brAgx02c2kRBCOVao5uXeocKciTGTO4=">
+		
+			<p> 
+				Quae dum ita struuntur, indicatum est apud Tyrum indumentum regale textum occulte, incertum quo locante vel cuius usibus apparatum. 
+				ideoque rector provinciae tunc pater Apollinaris eiusdem nominis ut conscius ductus est aliique congregati sunt ex diversis civitatibus multi, 
+				qui atrocium criminum ponderibus urgebantur. 
+			</p>
+			
+			<p> 
+				Sed (saepe enim redeo ad Scipionem, cuius omnis sermo erat de amicitia) querebatur, quod omnibus in rebus homines diligentiores essent; 
+				capras et oves quot quisque haberet, dicere posse, amicos quot haberet, non posse dicere et in illis quidem parandis adhibere curam, 
+				in amicis eligendis neglegentis esse nec habere quasi signa quaedam et notas, quibus eos qui ad amicitias essent idonei, iudicarent. 
+				Sunt igitur firmi et stabiles et constantes eligendi; cuius generis est magna penuria. Et iudicare difficile est sane nisi expertum; 
+				experiendum autem est in ipsa amicitia. Ita praecurrit amicitia iudicium tollitque experiendi potestatem.
+			</p>
+			
+			<p> 
+				Oportunum est, ut arbitror, explanare nunc causam, quae ad exitium praecipitem Aginatium inpulit iam inde a priscis maioribus nobilem, 
+				ut locuta est pertinacior fama. nec enim super hoc ulla documentorum rata est fides.
+			</p>
+			
+			<p> 
+				Haec subinde Constantius audiens et quaedam referente Thalassio doctus, quem eum odisse iam conpererat lege communi, scribens ad Caesarem 
+				blandius adiumenta paulatim illi subtraxit, sollicitari se simulans ne, uti est militare otium fere tumultuosum, in eius perniciem conspiraret, 
+				solisque scholis iussit esse contentum palatinis et protectorum cum Scutariis et Gentilibus, et mandabat Domitiano, ex comite largitionum, 
+				praefecto ut cum in Syriam venerit, Gallum, quem crebro acciverat, ad Italiam properare blande hortaretur et verecunde.
+			</p>
+			
+			<p>
+				Quod cum ita sit, paucae domus studiorum seriis cultibus antea celebratae nunc ludibriis ignaviae torpentis exundant, vocali sonu, perflabili 
+				tinnitu fidium resultantes. denique pro philosopho cantor et in locum oratoris doctor artium ludicrarum accitur et bybliothecis sepulcrorum ritu 
+				in perpetuum clausis organa fabricantur hydraulica, et lyrae ad speciem carpentorum ingentes tibiaeque et histrionici gestus instrumenta non levia.
+			</p>
+			
+			<p> 
+				Siquis enim militarium vel honoratorum aut nobilis inter suos rumore tenus esset insimulatus fovisse partes hostiles, iniecto onere catenarum in modum 
+				beluae trahebatur et inimico urgente vel nullo, quasi sufficiente hoc solo, quod nominatus esset aut delatus aut postulatus, capite vel multatione 
+				bonorum aut insulari solitudine damnabatur.
+			</p>
+			
+			<p> 
+				Tempore quo primis auspiciis in mundanum fulgorem surgeret victura dum erunt homines Roma, ut augeretur sublimibus incrementis, foedere pacis aeternae 
+				Virtus convenit atque Fortuna plerumque dissidentes, quarum si altera defuisset, ad perfectam non venerat summitatem.
+			</p>
+			
+			<p> 
+				Principium autem unde latius se funditabat, emersit ex negotio tali. Chilo ex vicario et coniux eius Maxima nomine, questi apud Olybrium ea tempestate 
+				urbi praefectum, vitamque suam venenis petitam adseverantes inpetrarunt ut hi, quos suspectati sunt, ilico rapti conpingerentur in vincula, organarius 
+				Sericus et Asbolius palaestrita et aruspex Campensis.
+			</p>
+			
+			<p> 
+				Montius nos tumore inusitato quodam et novo ut rebellis et maiestati recalcitrantes Augustae per haec quae strepit incusat iratus nimirum quod 
+				contumacem praefectum, quid rerum ordo postulat ignorare dissimulantem formidine tenus iusserim custodiri.
+			</p>
+			
+			<p> 
+				Eodem tempore etiam Hymetii praeclarae indolis viri negotium est actitatum, cuius hunc novimus esse textum. cum Africam pro consule regeret 
+				Carthaginiensibus victus inopia iam lassatis, ex horreis Romano populo destinatis frumentum dedit, pauloque postea cum provenisset segetum 
+				copia, integre sine ulla restituit mora.
+			</p>
+		</section>
+		
 	</body>
 	
 </html>
