partie 3 : coupe du monde

--- a/index.html
+++ b/index.html
@@ -151,6 +151,23 @@
 		
 		<!-- "Retour au menu" ici --->
 		
+		<section id="coupe">
+		
+			<h1> Résultat de la coupe du monde 2018 </h1>
+			
+			<img src="https://upload.wikimedia.org/wikipedia/fr/f/f7/FIFA_World_Cup_2018_Logo.png">
+			
+			<ol>
+				<li> France </li>
+				<li> Croatie </li>
+				<li> Belgique </li>
+				<li> Angleterre </li>
+			</ol>
+		
+		</section>
+		
+		<!-- "Retour au menu" ici --->
+		
 	</body>
 	
 </html>
