--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
 
 	<body>
 	
+		<section id="menu">
+		
+			<ul>
+				<li> JCVD <a href="#jcvd"> ici </a> </li>
+				<li> Patrick Sébastien <a href="#seb"> ici </a> </li>
+				<li> Classement Coupe du Monde 2018 <a href="#coupe"> ici </a> </li>
+				<li> Tableau <a href="#tableau"> ici </a> </li>
+			</ul>
+		
+		</section>
+	
 		<section id="jcvd">
 		
 			<h1> JCVD </h1>
@@ -89,7 +100,7 @@
 			
 		</section>
 		
-		<!-- "Retour au menu" ici --->
+		<a href="#menu"> Retour en haut </a>
 		
 		<section id="seb">
 		
@@ -149,7 +160,7 @@
 		
 		</section>
 		
-		<!-- "Retour au menu" ici --->
+		<a href="#menu"> Retour en haut </a>
 		
 		<section id="coupe">
 		
@@ -171,7 +182,7 @@
 		
 		</section>
 		
-		<!-- "Retour au menu" ici --->
+		<a href="#menu"> Retour en haut </a>
 		
 		<section id="tableau">
 		
@@ -210,10 +221,10 @@
 				</tfoot>
 				
 			</table>
-			
-			<!-- "Retour au menu" ici --->
 		
 		</section>
+		
+		<a href="#menu"> Retour en haut </a>
 		
 	</body>
 	
