--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 			<h1> JCVD </h1>
 			
-			<img src="https://media.gettyimages.com/id/100961135/es/foto/belgian-actor-jean-claude-van-damme-on-the-set-of-universal-soldier-1991.jpg?s=612x612&w=gi&k=20&c=5g7KCQDlpg53brAgx02c2kRBCOVao5uXeocKciTGTO4=">
+			<img src="https://media.gettyimages.com/id/100961135/es/foto/belgian-actor-jean-claude-van-damme-on-the-set-of-universal-soldier-1991.jpg?s=612x612&w=gi&k=20&c=5g7KCQDlpg53brAgx02c2kRBCOVao5uXeocKciTGTO4=" alt="image de Jean Claude Van Damme">
 		
 			<p> 
 				Quae dum ita struuntur, indicatum est apud Tyrum indumentum regale textum occulte, incertum quo locante vel cuius usibus apparatum. 
@@ -166,7 +166,7 @@
 		
 			<h1> Résultat de la coupe du monde 2018 </h1>
 			
-			<img src="https://upload.wikimedia.org/wikipedia/fr/f/f7/FIFA_World_Cup_2018_Logo.png">
+			<img src="https://upload.wikimedia.org/wikipedia/fr/f/f7/FIFA_World_Cup_2018_Logo.png" alt="Logo de la Coupe du Monde 2018 de FIFA">
 			
 			<ol>
 				<li> France </li>
@@ -202,13 +202,13 @@
 					<tr>
 						<td> Tartempion </td>
 						<td> 27 </td>
-						<td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Ensign_of_France.svg/langfr-225px-Ensign_of_France.svg.png"> </td>
+						<td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Ensign_of_France.svg/langfr-225px-Ensign_of_France.svg.png" alt="drapeau de la france"> </td>
 					</tr>
 					
 					<tr>
 						<td> Vanderbruck </td>
 						<td> 21 </td>
-						<td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/langfr-338px-Flag_of_Belgium_%28civil%29.svg.png"> </td>
+						<td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/langfr-338px-Flag_of_Belgium_%28civil%29.svg.png" alt="drapeau de la belgique"> </td>
 					</tr>	
 				</tbody>
 				
